{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 104,
  "lineage": "cae88144-f4a3-281c-bcd3-80462c0278aa",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa1f17e0-aadf-4e9b-a932-ed75c5eab77a/resourceGroups/project-rg/providers/Microsoft.Network/networkInterfaces/web-nic",
            "internal_domain_name_suffix": "xsqeglgtakaunh0zsd0b4zmnbf.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-ip",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/fa1f17e0-aadf-4e9b-a932-ed75c5eab77a/resourceGroups/project-rg/providers/Microsoft.Network/publicIPAddresses/web-publicIP",
                "subnet_id": "/subscriptions/fa1f17e0-aadf-4e9b-a932-ed75c5eab77a/resourceGroups/project-rg/providers/Microsoft.Network/virtualNetworks/staging-network/subnets/web-subnet"
              }
            ],
            "location": "eastus",
            "mac_address": "7C-1E-52-00-5C-F8",
            "name": "web-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "project-rg",
            "virtual_machine_id": "/subscriptions/fa1f17e0-aadf-4e9b-a932-ed75c5eab77a/resourceGroups/project-rg/providers/Microsoft.Compute/virtualMachines/web-vm"
          },
          "dependencies": [
            "azurerm_public_ip.web-publicIP",
            "module.general.azurerm_resource_group.rg",
            "module.networking.azurerm_subnet.subnets",
            "module.networking.azurerm_virtual_network.v-net",
            "module.networking.module.resource_group.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web-publicIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "fqdn": "webs.eastus.cloudapp.azure.com",
            "id": "/subscriptions/fa1f17e0-aadf-4e9b-a932-ed75c5eab77a/resourceGroups/project-rg/providers/Microsoft.Network/publicIPAddresses/web-publicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.117.193.19",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "web-publicIP",
            "resource_group_name": "project-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.general.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa1f17e0-aadf-4e9b-a932-ed75c5eab77a/resourceGroups/project-rg/providers/Microsoft.Network/networkInterfaces/db-nic",
            "internal_domain_name_suffix": "xsqeglgtakaunh0zsd0b4zmnbf.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa1f17e0-aadf-4e9b-a932-ed75c5eab77a/resourceGroups/project-rg/providers/Microsoft.Network/virtualNetworks/staging-network/subnets/db-subnet"
              }
            ],
            "location": "eastus",
            "mac_address": "60-45-BD-EF-F5-B9",
            "name": "db-nic",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "project-rg",
            "virtual_machine_id": "/subscriptions/fa1f17e0-aadf-4e9b-a932-ed75c5eab77a/resourceGroups/project-rg/providers/Microsoft.Compute/virtualMachines/database-vm"
          },
          "dependencies": [
            "module.compute.azurerm_public_ip.vm-PublicIP",
            "module.networking.azurerm_bastion_host.bastian_host",
            "module.networking.azurerm_network_security_group.web-nsg",
            "module.networking.azurerm_network_security_rule.network-security-group-rules",
            "module.networking.azurerm_public_ip.bastian_publicIP",
            "module.networking.azurerm_subnet.bastian_subnet",
            "module.networking.azurerm_subnet.subnets",
            "module.networking.azurerm_subnet_network_security_group_association.nsg-subnet-link",
            "module.networking.azurerm_virtual_network.v-net",
            "module.networking.module.resource_group.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "db-nsg",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa1f17e0-aadf-4e9b-a932-ed75c5eab77a/resourceGroups/project-rg/providers/Microsoft.Network/networkSecurityGroups/db-nsg",
            "location": "eastus",
            "name": "db-nsg",
            "resource_group_name": "project-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-3389",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.resource_group.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "web-nsg",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa1f17e0-aadf-4e9b-a932-ed75c5eab77a/resourceGroups/project-rg/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
            "location": "eastus",
            "name": "web-nsg",
            "resource_group_name": "project-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-3389",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-80",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8172",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-8172",
                "priority": 400,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.resource_group.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "network-security-group-rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/fa1f17e0-aadf-4e9b-a932-ed75c5eab77a/resourceGroups/project-rg/providers/Microsoft.Network/networkSecurityGroups/web-nsg/securityRules/Allow-3389",
            "name": "Allow-3389",
            "network_security_group_name": "web-nsg",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "project-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.azurerm_network_security_group.web-nsg",
            "module.networking.module.resource_group.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/fa1f17e0-aadf-4e9b-a932-ed75c5eab77a/resourceGroups/project-rg/providers/Microsoft.Network/networkSecurityGroups/web-nsg/securityRules/Allow-80",
            "name": "Allow-80",
            "network_security_group_name": "web-nsg",
            "priority": 300,
            "protocol": "Tcp",
            "resource_group_name": "project-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.azurerm_network_security_group.web-nsg",
            "module.networking.module.resource_group.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "3",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "8172",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/fa1f17e0-aadf-4e9b-a932-ed75c5eab77a/resourceGroups/project-rg/providers/Microsoft.Network/networkSecurityGroups/web-nsg/securityRules/Allow-8172",
            "name": "Allow-8172",
            "network_security_group_name": "web-nsg",
            "priority": 400,
            "protocol": "Tcp",
            "resource_group_name": "project-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.azurerm_network_security_group.web-nsg",
            "module.networking.module.resource_group.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "4",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/fa1f17e0-aadf-4e9b-a932-ed75c5eab77a/resourceGroups/project-rg/providers/Microsoft.Network/networkSecurityGroups/db-nsg/securityRules/Allow-3389",
            "name": "Allow-3389",
            "network_security_group_name": "db-nsg",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "project-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.azurerm_network_security_group.web-nsg",
            "module.networking.module.resource_group.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastian_publicIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/fa1f17e0-aadf-4e9b-a932-ed75c5eab77a/resourceGroups/project-rg/providers/Microsoft.Network/publicIPAddresses/bastian_ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "23.96.49.32",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "bastian_ip",
            "resource_group_name": "project-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.networking.module.resource_group.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastian_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.10.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fa1f17e0-aadf-4e9b-a932-ed75c5eab77a/resourceGroups/project-rg/providers/Microsoft.Network/virtualNetworks/staging-network/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "project-rg",
            "virtual_network_name": "staging-network"
          },
          "dependencies": [
            "module.networking.azurerm_virtual_network.v-net",
            "module.networking.module.resource_group.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "db-subnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fa1f17e0-aadf-4e9b-a932-ed75c5eab77a/resourceGroups/project-rg/providers/Microsoft.Network/virtualNetworks/staging-network/subnets/db-subnet",
            "name": "db-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "project-rg",
            "virtual_network_name": "staging-network"
          },
          "dependencies": [
            "module.networking.azurerm_virtual_network.v-net",
            "module.networking.module.resource_group.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "web-subnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fa1f17e0-aadf-4e9b-a932-ed75c5eab77a/resourceGroups/project-rg/providers/Microsoft.Network/virtualNetworks/staging-network/subnets/web-subnet",
            "name": "web-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "project-rg",
            "virtual_network_name": "staging-network"
          },
          "dependencies": [
            "module.networking.azurerm_virtual_network.v-net",
            "module.networking.module.resource_group.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg-subnet-link",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "db-nsg",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa1f17e0-aadf-4e9b-a932-ed75c5eab77a/resourceGroups/project-rg/providers/Microsoft.Network/virtualNetworks/staging-network/subnets/db-subnet",
            "network_security_group_id": "/subscriptions/fa1f17e0-aadf-4e9b-a932-ed75c5eab77a/resourceGroups/project-rg/providers/Microsoft.Network/networkSecurityGroups/db-nsg",
            "subnet_id": "/subscriptions/fa1f17e0-aadf-4e9b-a932-ed75c5eab77a/resourceGroups/project-rg/providers/Microsoft.Network/virtualNetworks/staging-network/subnets/db-subnet"
          },
          "dependencies": [
            "module.networking.azurerm_network_security_group.web-nsg",
            "module.networking.azurerm_subnet.subnets",
            "module.networking.azurerm_virtual_network.v-net",
            "module.networking.module.resource_group.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "web-nsg",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa1f17e0-aadf-4e9b-a932-ed75c5eab77a/resourceGroups/project-rg/providers/Microsoft.Network/virtualNetworks/staging-network/subnets/web-subnet",
            "network_security_group_id": "/subscriptions/fa1f17e0-aadf-4e9b-a932-ed75c5eab77a/resourceGroups/project-rg/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
            "subnet_id": "/subscriptions/fa1f17e0-aadf-4e9b-a932-ed75c5eab77a/resourceGroups/project-rg/providers/Microsoft.Network/virtualNetworks/staging-network/subnets/web-subnet"
          },
          "dependencies": [
            "module.networking.azurerm_network_security_group.web-nsg",
            "module.networking.azurerm_subnet.subnets",
            "module.networking.azurerm_virtual_network.v-net",
            "module.networking.module.resource_group.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "v-net",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "2c43a0bc-02d3-4681-9f59-90f41f658d0d",
            "id": "/subscriptions/fa1f17e0-aadf-4e9b-a932-ed75c5eab77a/resourceGroups/project-rg/providers/Microsoft.Network/virtualNetworks/staging-network",
            "location": "eastus",
            "name": "staging-network",
            "resource_group_name": "project-rg",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/fa1f17e0-aadf-4e9b-a932-ed75c5eab77a/resourceGroups/project-rg/providers/Microsoft.Network/virtualNetworks/staging-network/subnets/db-subnet",
                "name": "db-subnet",
                "security_group": "/subscriptions/fa1f17e0-aadf-4e9b-a932-ed75c5eab77a/resourceGroups/project-rg/providers/Microsoft.Network/networkSecurityGroups/db-nsg"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/fa1f17e0-aadf-4e9b-a932-ed75c5eab77a/resourceGroups/project-rg/providers/Microsoft.Network/virtualNetworks/staging-network/subnets/web-subnet",
                "name": "web-subnet",
                "security_group": "/subscriptions/fa1f17e0-aadf-4e9b-a932-ed75c5eab77a/resourceGroups/project-rg/providers/Microsoft.Network/networkSecurityGroups/web-nsg"
              },
              {
                "address_prefix": "10.0.10.0/24",
                "id": "/subscriptions/fa1f17e0-aadf-4e9b-a932-ed75c5eab77a/resourceGroups/project-rg/providers/Microsoft.Network/virtualNetworks/staging-network/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet"
              }
            ]
          },
          "dependencies": [
            "module.networking.module.resource_group.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}